--- a/team.html
+++ b/team.html
@@ -74,7 +74,7 @@
     <div class="team-leader">
       <h3 style="color:#006600; margin-top:25px;">Team Leader</h3>
       <div class="member-card">
-        <img src="assets/images/aamir.jpg" alt="Aamir Raoof Memon">
+        <img src="assets/images/aamir-memon.jpg" alt="Aamir Raoof Memon">
         <h3>Aamir Raoof Memon</h3>
         <p>Assistant Professor, Peoples University of Medical and Health Sciences for Women, Nawabshah, Sindh, Pakistan.<br>
         PhD Candidate, Victoria University, Melbourne, Australia.<br>
