--- a/team.html
+++ b/team.html
@@ -6,64 +6,65 @@
   <title>Our Team | Active Healthy Kids Pakistan</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <style>
-    /* Optional: team-specific layout enhancements */
-    .team-container {
+    .team-section {
       max-width: 1100px;
-      margin: 0 auto;
-      padding: 40px 20px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
+
+    .member-card {
+      background: #f8f8f8;
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+    .member-card:hover {
+      transform: translateY(-5px);
+    }
+    .member-card img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
+    .member-card h3 {
+      color: #006600;
+      margin: 10px 0 5px;
+    }
+    .member-card p {
+      font-size: 0.95rem;
+      line-height: 1.4;
+    }
+    .links a {
+      color: #006600;
+      font-weight: 600;
+      text-decoration: none;
+      margin: 0 5px;
+    }
+
+    /* Layout */
+    .team-leader {
+      text-align: center;
+      margin-bottom: 60px;
+    }
+
     .team-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      margin-top: 30px;
-    }
-    .team-member {
-      background: #f9f9f9;
-      border-radius: 10px;
-      text-align: center;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-    .team-member:hover {
-      transform: translateY(-5px);
-    }
-    .team-member img {
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 15px;
-    }
-    .team-member h3 {
-      color: #006600;
-      font-size: 1.2em;
-      margin-bottom: 8px;
-    }
-    .team-member p {
-      font-size: 0.95em;
-      line-height: 1.4;
-      margin-bottom: 6px;
-    }
-    .email, .orcid {
-      font-size: 0.85em;
-      color: #004d00;
-    }
-    .team-leader {
-      background: #eaf5ea;
-      border: 2px solid #006600;
+      gap: 25px;
     }
   </style>
 </head>
-
 <body>
 
   <!-- Header -->
   <header class="site-header">
     <nav class="main-nav">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.png" alt="Logo"></a>
+        <a href="index.html"><img src="assets/images/logo.png" alt="AHK Pakistan Logo" height="60"></a>
       </div>
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
@@ -75,85 +76,82 @@
     </nav>
   </header>
 
-  <!-- Main Section -->
-  <section class="team-container">
+  <!-- Team Section -->
+  <section class="team-section">
     <h2 style="text-align:center;">Our Team</h2>
     <p style="text-align:center; max-width:800px; margin:10px auto;">
-      The <strong>Active Healthy Kids Pakistan</strong> team brings together experts in physical activity, sports science, public health, and rehabilitation from leading institutions across Pakistan and abroad.
+      The <strong>Active Healthy Kids Pakistan</strong> team brings together experts in physical activity, sports science, and public health from leading institutions across Pakistan and abroad.
     </p>
 
     <!-- Team Leader -->
-    <div class="team-grid">
-      <div class="team-member team-leader">
-        <img src="assets/images/aamir-memon.jpg" alt="Aamir Raoof Memon">
+    <div class="team-leader">
+      <h3 style="color:#006600;">Team Leader</h3>
+      <div class="member-card" style="max-width:400px; margin:0 auto;">
+        <img src="assets/images/aamir.jpg" alt="Aamir Raoof Memon">
         <h3>Dr. Aamir Raoof Memon</h3>
-        <p><em>Team Leader</em></p>
-        <p>Assistant Professor, Peoples University of Medical and Health Sciences for Women, Nawabshah, Sindh, Pakistan.</p>
-        <p>PhD Candidate, Victoria University, Melbourne, Australia.</p>
-        <p class="email">E: <a href="mailto:memon.aamir.raoof@gmail.com">memon.aamir.raoof@gmail.com</a></p>
-        <p class="orcid">ORCID: <a href="https://orcid.org/0000-0002-3203-418X" target="_blank">0000-0002-3203-418X</a></p>
-          </p>
+        <p>Assistant Professor, Peoples University of Medical and Health Sciences for Women, Nawabshah, Sindh, Pakistan.<br>
+        PhD Candidate, Victoria University, Melbourne, Australia.</p>
+        <p><b>Email:</b> <a href="mailto:memon.aamir.raoof@gmail.com">memon.aamir.raoof@gmail.com</a><br>
+        <b>ORCID:</b> <a href="https://orcid.org/0000-0002-3203-418X" target="_blank">0000-0002-3203-418X</a></p>
         <div class="links">
           <a href="https://www.researchgate.net/profile/Aamir-Memon-3" target="_blank">ResearchGate</a> |
           <a href="https://scholar.google.com.pk/citations?hl=en&user=YbT-npQAAAAJ" target="_blank">Google Scholar</a>
-          </p>
+        </div>
       </div>
-      </div
-      </div>
-
-    <h3 style="margin-top:40px; text-align:center;">Team Members</h3>
+    </div>
 
     <!-- Team Members -->
+    <h3 style="text-align:center; color:#006600;">Team Members</h3>
     <div class="team-grid">
 
-      <div class="team-member">
-        <img src="assets/images/zeeshan-hamdani.jpg" alt="Dr Syed Muhammad Zeeshan Hamdani">
+      <div class="member-card">
+        <img src="assets/images/zeeshan.jpg" alt="Dr. Syed Muhammad Zeeshan Hamdani">
         <h3>Dr. Syed Muhammad Zeeshan Hamdani</h3>
-        <p>Assistant Professor, Department of Sports Sciences, Bahauddin Zakariya University, Multan, Pakistan.</p>
-        <p class="email">E: <a href="mailto:zeeshanhamdani@bzu.edu.pk">zeeshanhamdani@bzu.edu.pk</a></p>
+        <p>Assistant Professor, Department of Sports Sciences, Bahauddin Zakariya University, Multan, Pakistan.<br>
+        <b>Email:</b> <a href="mailto:zeeshanhamdani@bzu.edu.pk">zeeshanhamdani@bzu.edu.pk</a></p>
       </div>
 
-      <div class="team-member">
-        <img src="assets/images/ghufran-haider.jpg" alt="Syed Ghufran Haider">
+      <div class="member-card">
+        <img src="assets/images/ghufran.jpg" alt="Syed Ghufran Haider">
         <h3>Syed Ghufran Haider</h3>
-        <p>Department of Sports Sciences, Bahauddin Zakariya University, Multan, Pakistan.</p>
-        <p>Research Associate, School of Sports Sciences, Shanxi University, China.</p>
-        <p class="email">E: <a href="mailto:ghufranhamdani77@gmail.com">ghufranhamdani77@gmail.com</a></p>
+        <p>Department of Sports Sciences, BZU, Multan, Pakistan.<br>
+        Research Associate, School of Sports Sciences, Shanxi University, China.<br>
+        <b>Email:</b> <a href="mailto:ghufranhamdani77@gmail.com">ghufranhamdani77@gmail.com</a></p>
       </div>
 
-      <div class="team-member">
-        <img src="assets/images/ishtiaq-ahmed.jpg" alt="Ishtiaq Ahmed">
+      <div class="member-card">
+        <img src="assets/images/ishtiaq.jpg" alt="Ishtiaq Ahmed">
         <h3>Ishtiaq Ahmed</h3>
-        <p>PhD Candidate, Vrije Universiteit Brussel (VUB), Belgium.</p>
-        <p class="email">E: <a href="mailto:ixhtiaq8@gmail.com">ixhtiaq8@gmail.com</a></p>
+        <p>PhD Candidate, Vrije Universiteit Brussel (VUB), Belgium.<br>
+        <b>Email:</b> <a href="mailto:ixhtiaq8@gmail.com">ixhtiaq8@gmail.com</a></p>
       </div>
 
-      <div class="team-member">
-        <img src="assets/images/bahadur-ali.jpg" alt="Dr Bahadur Ali">
+      <div class="member-card">
+        <img src="assets/images/bahadur.jpg" alt="Dr. Bahadur Ali">
         <h3>Dr. Bahadur Ali</h3>
-        <p>Associate Professor, Peoples University of Medical and Health Sciences for Women, Nawabshah, Sindh, Pakistan.</p>
-        <p class="email">E: <a href="mailto:bahadurali@pumhs.edu.pk">bahadurali@pumhs.edu.pk</a></p>
+        <p>Associate Professor, Peoples University of Medical and Health Sciences for Women, Nawabshah, Pakistan.<br>
+        <b>Email:</b> <a href="mailto:bahadurali@pumhs.edu.pk">bahadurali@pumhs.edu.pk</a></p>
       </div>
 
-      <div class="team-member">
-        <img src="assets/images/ehab-azim.jpg" alt="Dr Muhammad Ehab Azim">
+      <div class="member-card">
+        <img src="assets/images/ehab.jpg" alt="Dr. Muhammad Ehab Azim">
         <h3>Dr. Muhammad Ehab Azim</h3>
-        <p>Associate Professor, Foundation University Islamabad, Pakistan.</p>
-        <p class="email">E: <a href="mailto:ehab@fui.edu.pk">ehab@fui.edu.pk</a></p>
+        <p>Associate Professor, Foundation University Islamabad, Pakistan.<br>
+        <b>Email:</b> <a href="mailto:ehab@fui.edu.pk">ehab@fui.edu.pk</a></p>
       </div>
 
-      <div class="team-member">
-        <img src="assets/images/tasleem-arif.jpg" alt="Dr Tasleem Arif">
+      <div class="member-card">
+        <img src="assets/images/tasleem.jpg" alt="Dr. Tasleem Arif">
         <h3>Dr. Tasleem Arif</h3>
-        <p>Assistant Professor, The University of Haripur, Pakistan.</p>
-        <p class="email">E: <a href="mailto:tasleem.arif@uoh.edu.pk">tasleem.arif@uoh.edu.pk</a></p>
+        <p>Assistant Professor, The University of Haripur, Pakistan.<br>
+        <b>Email:</b> <a href="mailto:tasleem.arif@uoh.edu.pk">tasleem.arif@uoh.edu.pk</a></p>
       </div>
 
-      <div class="team-member">
-        <img src="assets/images/rida-fatima.jpg" alt="Rida Fatima">
+      <div class="member-card">
+        <img src="assets/images/rida.jpg" alt="Rida Fatima">
         <h3>Rida Fatima</h3>
-        <p>Chongqing Medical University, China.</p>
-        <p class="email">E: <a href="mailto:ridadoctor345@gmail.com">ridadoctor345@gmail.com</a></p>
+        <p>Chongqing Medical University, China.<br>
+        <b>Email:</b> <a href="mailto:ridadoctor345@gmail.com">ridadoctor345@gmail.com</a></p>
       </div>
 
     </div>
