--- a/team.html
+++ b/team.html
@@ -148,7 +148,7 @@
       </div>
 
       <div class="member-card">
-        <img src="assets/images/rida.JPG" alt="Rida Fatima">
+        <img src="assets/images/rida.jpg" alt="Rida Fatima">
         <h3>Rida Fatima</h3>
         <p>Chongqing Medical University, China.<br>
         <b>Email:</b> <a href="mailto:ridadoctor345@gmail.com">ridadoctor345@gmail.com</a></p>
