--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,7 @@
       <input type="text" name="name" placeholder="Full Name" required>
       <input type="text" name="affiliation" placeholder="Affiliation" required>
       <input type="text" name="title" placeholder="Title/Position" required>
+      <input type="text" name="subject" placeholder="Subject" required>
       <textarea name="message" placeholder="Your message..." rows="6" required></textarea>
       <button type="submit">Send Message</button>
     </form>
