--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <ul class="nav-list" role="menubar" aria-label="Main Navigation">
         <li><a href="index.html">Home</a></li>
-        <li><a href="findings_overall.html">Findings</a></li>
+        <li><a href="findings.html">Findings</a></li>
         <li><a href="team.html">Team</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
