--- a/findings.html
+++ b/findings.html
@@ -1,86 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Overall Physical Activity | Active Healthy Kids Pakistan</title>
-  <link rel="stylesheet" href="assets/css/style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Findings | Active Healthy Kids Pakistan</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
   <style>
-    .indicator-container {
-      max-width: 900px;
+    body {
+      font-family: Arial, sans-serif;
+    }
+    .findings-container {
+      max-width: 1000px;
       margin: 40px auto;
       padding: 0 20px;
     }
-    .indicator-header {
+    .findings-header {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
     }
-    .indicator-header h1 {
+    .findings-header h1 {
       color: #006600;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
     }
-    .grade {
-      font-size: 1.5rem;
-      color: #004d00;
-      margin-bottom: 20px;
-    }
-    .tabs {
+    .indicator-list {
       display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-      margin-bottom: 25px;
+      flex-direction: column;
+      gap: 15px;
     }
-    .tabs button {
-      padding: 10px 20px;
+    .indicator {
       border: 1px solid #006600;
-      background: white;
-      color: #006600;
-      cursor: pointer;
-      border-radius: 4px;
-      font-size: 1rem;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    .tabs button.active {
-      background: #006600;
+    .indicator-header {
+      background-color: #006600;
       color: white;
+      padding: 15px 20px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    .tab-content {
+    .indicator-header span.grade {
+      background: #fff;
+      color: #006600;
+      padding: 3px 8px;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+    .indicator-content {
       display: none;
-    }
-    .tab-content.active {
-      display: block;
+      padding: 20px;
+      background: #f8f8f8;
       animation: fadeIn 0.3s ease-in-out;
     }
+    .indicator-content.active {
+      display: block;
+    }
     @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+      from {opacity: 0;}
+      to {opacity: 1;}
     }
-    .tab-content h3 {
+    .indicator-content h3 {
       color: #004d00;
-      margin: 15px 0 10px;
+      margin-top: 0;
     }
-    .tab-content ul, .tab-content p {
-      margin-bottom: 15px;
+    .indicator-content ul {
+      margin: 10px 0 20px;
+      padding-left: 20px;
+    }
+    .indicator-content p {
       line-height: 1.6;
-    }
-    .download-links a {
-      display: inline-block;
-      margin-right: 12px;
-      color: #006600;
-      text-decoration: none;
-      font-weight: 600;
     }
   </style>
 </head>
 <body>
 
-  <!-- Header/navigation – reuse your header block -->
+  <!-- Header -->
   <header class="site-header">
     <nav class="main-nav">
-      <div class="logo"><a href="index.html"><img src="assets/images/logo.png" alt="Logo" height="60"/></a></div>
+      <div class="logo">
+        <a href="index.html"><img src="assets/images/logo.png" alt="Logo" height="60" /></a>
+      </div>
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
-        <li><a href="findings.html">Findings</a></li>
+        <li><a href="findings.html" class="active">Findings</a></li>
         <li><a href="team.html">Team</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -88,73 +94,188 @@
     </nav>
   </header>
 
-  <section class="indicator-container">
-    <div class="indicator-header">
-      <h1>Overall Physical Activity</h1>
-      <div class="grade">Grade: D-**</div>
-      <div class="download-links">
-        <a href="#">202X Short-form Report (PDF)</a>
-        <a href="#">202X Long-form Report (PDF)</a>
+  <section class="findings-container">
+    <div class="findings-header">
+      <h1>Pakistan Report Card 2025</h1>
+      <p>Summary of grades and key findings across all 10 Global Matrix indicators.</p>
+    </div>
+
+    <div class="indicator-list">
+
+      <!-- Indicator 1 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Overall Physical Activity</span>
+          <span class="grade">D</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Percentage of children and adolescents meeting WHO’s recommendation of at least 60 minutes of moderate-to-vigorous physical activity daily.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Only X% of Pakistani youth meet physical activity guidelines.</li>
+            <li>Boys are generally more active than girls.</li>
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <div class="tabs">
-      <button class="tab-button active" data-tab="benchmark">Benchmark</button>
-      <button class="tab-button" data-tab="findings">Key Findings</button>
-      <button class="tab-button" data-tab="trend">Trend / History</button>
-      <button class="tab-button" data-tab="references">References</button>
-    </div>
+      <!-- Indicator 2 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Organized Sport Participation</span>
+          <span class="grade">C-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children and adolescents participating in organized sports at least once a week.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Participation is higher among urban boys compared to rural girls.</li>
+            <li>Limited infrastructure and access remain barriers.</li>
+          </ul>
+        </div>
+      </div>
 
-    <div id="benchmark" class="tab-content active">
-      <h3>Benchmark</h3>
-      <p>
-        <!-- Paste or adapt benchmark statement -->
-        % of children and adolescents who meet the Global Recommendations on Physical Activity for Health, which recommend that children and adolescents accumulate at least 60 min of moderate- to vigorous-intensity physical activity per day on average.
-      </p>
-    </div>
+      <!-- Indicator 3 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Active Play</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children who engage in unstructured active play several times per week.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Traditional games are common but declining in urban settings.</li>
+          </ul>
+        </div>
+      </div>
 
-    <div id="findings" class="tab-content">
-      <h3>Key Findings</h3>
-      <ul>
-        <!-- Example findings; replace with your data -->
-        <li>89% of adolescents aged 11-18 years accumulated at least 60 min of MVPA per day (n = 552).</li>
-        <li>22.1% of children in grades 1–3 had at least 60 minutes of daily MVPA over a week (n = 263).</li>
-        <li>10% of children in primary 1–6 with mean age 9.3 years had at least 60 minutes of MVPA per day (n = 191).</li>
-        <!-- more items -->
-      </ul>
-    </div>
+      <!-- Indicator 4 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Active Transportation</span>
+          <span class="grade">B</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children using active means (walking, cycling) to travel to and from school.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Many children walk to school, especially in rural areas.</li>
+          </ul>
+        </div>
+      </div>
 
-    <div id="trend" class="tab-content">
-      <h3>Trend / History</h3>
-      <p>2018 Grade: C-, 2016 Grade: D (or your data)...</p>
-      <!-- You may show a small table or chart -->
-    </div>
+      <!-- Indicator 5 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Sedentary Behaviours</span>
+          <span class="grade">C+</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children spending less than 2 hours daily on recreational screen time.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Screen time increasing rapidly in urban populations.</li>
+          </ul>
+        </div>
+      </div>
 
-    <div id="references" class="tab-content">
-      <h3>References / Notes</h3>
-      <p>List of data sources, study citations, methodological notes etc.</p>
-    </div>
+      <!-- Indicator 6 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Physical Fitness</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Average physical fitness levels (cardiorespiratory, muscular strength) relative to international norms.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Limited national data; school-level studies suggest moderate fitness levels.</li>
+          </ul>
+        </div>
+      </div>
 
+      <!-- Indicator 7 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Family and Peers</span>
+          <span class="grade">C-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of parents and peers providing support for physical activity (encouragement, participation, transportation).</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Parental support varies by socioeconomic status.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 8 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>School</span>
+          <span class="grade">B-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of schools offering regular physical education classes and activity opportunities.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>PE classes exist in policy but not consistently implemented.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 9 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Community and Environment</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Availability and accessibility of community-level facilities supporting physical activity.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Limited safe and inclusive public spaces for play.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 10 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Government</span>
+          <span class="grade">C+</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Evidence of leadership, policies, and investments supporting physical activity for children and youth.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Recent national policies acknowledge physical activity but implementation remains limited.</li>
+          </ul>
+        </div>
+      </div>
+
+    </div> <!-- end indicator list -->
   </section>
 
-  <!-- Footer -->
   <footer class="site-footer">
     <p>© 2025 Active Healthy Kids Pakistan | Hosted on GitHub Pages</p>
   </footer>
 
   <script>
-    // Simple tab control
-    document.querySelectorAll('.tab-button').forEach(button => {
-      button.addEventListener('click', () => {
-        const tab = button.dataset.tab;
-        // deactivate all
-        document.querySelectorAll('.tab-button').forEach(b => b.classList.remove('active'));
-        document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
-        // activate this
-        button.classList.add('active');
-        document.getElementById(tab).classList.add('active');
-      });
-    });
+    function toggleIndicator(element) {
+      const content = element.nextElementSibling;
+      content.classList.toggle('active');
+    }
   </script>
 
 </body>
