--- a/findings.html
+++ b/findings.html
@@ -116,6 +116,10 @@
             <li>Only X% of Pakistani youth meet physical activity guidelines.</li>
             <li>Boys are generally more active than girls.</li>
           </ul>
+          <h3>References</h3>
+          <li>1. xxxx </li>
+          <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
