--- a/findings.html
+++ b/findings.html
@@ -117,8 +117,8 @@
             <li>Boys are generally more active than girls.</li>
           </ul>
           <h3>References</h3>
-          <li>1. xxxx </li>
-          <li>2. xxxx.</li>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
           <ul>
         </div>
       </div>
@@ -137,6 +137,10 @@
             <li>Participation is higher among urban boys compared to rural girls.</li>
             <li>Limited infrastructure and access remain barriers.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
@@ -153,6 +157,10 @@
           <ul>
             <li>Traditional games are common but declining in urban settings.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
@@ -169,6 +177,10 @@
           <ul>
             <li>Many children walk to school, especially in rural areas.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
@@ -185,7 +197,10 @@
           <ul>
             <li>Screen time increasing rapidly in urban populations.</li>
           </ul>
-        </div>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul></div>
       </div>
 
       <!-- Indicator 6 -->
@@ -201,6 +216,11 @@
           <ul>
             <li>Limited national data; school-level studies suggest moderate fitness levels.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
+        </div>
         </div>
       </div>
 
@@ -217,6 +237,10 @@
           <ul>
             <li>Parental support varies by socioeconomic status.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
@@ -233,6 +257,10 @@
           <ul>
             <li>PE classes exist in policy but not consistently implemented.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
@@ -249,6 +277,10 @@
           <ul>
             <li>Limited safe and inclusive public spaces for play.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
@@ -265,6 +297,10 @@
           <ul>
             <li>Recent national policies acknowledge physical activity but implementation remains limited.</li>
           </ul>
+          <h3>References</h3>
+            <li>1. xxxx </li>
+            <li>2. xxxx.</li>
+          <ul>
         </div>
       </div>
 
