--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="main-nav" role="navigation">
       <div class="logo">
         <!-- Upload your logo at assets/images/logo.png and keep this path -->
-        <a href="index.html"><img src="assets/images/logo.png" alt="AHK Pakistan Logo" /></a>
+        <a href="index.html"><img src="assets/images/logo.jpg" alt="AHK Pakistan Logo" /></a>
       </div>
 
       <ul class="nav-list" role="menubar" aria-label="Main Navigation">
