--- a/team.html
+++ b/team.html
@@ -64,7 +64,7 @@
   <header class="site-header">
     <nav class="main-nav">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.png" alt="AHK Pakistan Logo" height="60"></a>
+        <a href="index.html"><img src="assets/images/logo.jpg" alt="AHK Pakistan Logo" height="60"></a>
       </div>
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
