--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
   <section class="alliance">
     <h2>Part of the Global Matrix Initiative</h2>
-    <p>Active Healthy Kids Pakistan is a proud member of the <a href="https://www.activehealthykids.org/5-0/" target="_blank">Active Healthy Kids Global Alliance</a>, a global network that evaluates and promotes physical activity among children and youth in over 60 countries.</p>
+    <p>Active Healthy Kids Pakistan is a proud member of the <a href="https://www.activehealthykids.org/" target="_blank">Active Healthy Kids Global Alliance</a>, a global network that evaluates and promotes physical activity among children and youth in over 60 countries.</p>
   </section>
 
   <footer class="site-footer">
